# in1weekend

./: .gitignore  Cargo.toml
src/: camera.rs  lib.rs  macros.rs  main.rs  material.rs  object.rs  ray.rs  scene.rs  shape.rs  texture.rs
src/presets/: cornell.rs  cover1.rs  cover2.rs  default.rs  empty.rs  mod.rs  test.rs
