[package]
name = "in1weekend"
version = "0.5.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
image = "0.20.1"
log = "0.4"
nalgebra = "0.16"
ncollide3d = "0.17"
palette = "0.4"
pretty_env_logger = "0.2.5"
rand = "0.5.5"
rayon = "1.0"

[profile.dev]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
